// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenInsightsSheet Market Data formats positive percent change correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "bottom": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#3f434a66",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      enabled={true}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#b7bbc866",
            "borderTopLeftRadius": 24,
            "borderTopRightRadius": 24,
            "borderWidth": 1,
            "maxHeight": 844,
            "overflow": "hidden",
            "paddingBottom": 0,
            "shadowColor": "#0000001a",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 40,
          },
          {
            "transform": [
              {
                "translateY": 844,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "padding": 4,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#b7bbc866",
              "borderRadius": 2,
              "height": 4,
              "width": 40,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#ffffff",
            "padding": 24,
            "width": "100%",
          }
        }
      >
        <View
          alignItems="center"
          flexDirection="column"
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "column",
              },
              {
                "gap": 2,
                "marginBottom": 16,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="token-insights-icon-USDC"
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "https://example.com/usdc.png",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            alignItems="center"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                {
                  "gap": 8,
                  "paddingTop": 16,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              USDC
               Insights
            </Text>
          </View>
        </View>
        <View
          flexDirection="column"
          style={
            [
              {
                "flexDirection": "column",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Price
              </Text>
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $1.00
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Percent change
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <SvgMock
                color="#457a39"
                fill="currentColor"
                height={16}
                name="Arrow2Up"
                style={
                  {
                    "height": 16,
                    "width": 16,
                  }
                }
                width={16}
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#457a39",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                +5.25%
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Volume
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $54.44M
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Market cap (FDV)
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $33.59B
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Contract address
              </Text>
            </View>
            <TouchableOpacity
              onPress={[Function]}
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={16}
                  name="Copy"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  width={16}
                />
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  0x12345...67890
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TokenInsightsSheet renders correctly with Solana token data 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "bottom": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#3f434a66",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      enabled={true}
      handlerTag={2}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#b7bbc866",
            "borderTopLeftRadius": 24,
            "borderTopRightRadius": 24,
            "borderWidth": 1,
            "maxHeight": 844,
            "overflow": "hidden",
            "paddingBottom": 0,
            "shadowColor": "#0000001a",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 40,
          },
          {
            "transform": [
              {
                "translateY": 844,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "padding": 4,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#b7bbc866",
              "borderRadius": 2,
              "height": 4,
              "width": 40,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#ffffff",
            "padding": 24,
            "width": "100%",
          }
        }
      >
        <View
          alignItems="center"
          flexDirection="column"
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "column",
              },
              {
                "gap": 2,
                "marginBottom": 16,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="token-insights-icon-USDC"
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "https://example.com/usdc-sol.png",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            alignItems="center"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                {
                  "gap": 8,
                  "paddingTop": 16,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              USDC
               Insights
            </Text>
          </View>
        </View>
        <View
          flexDirection="column"
          style={
            [
              {
                "flexDirection": "column",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Price
              </Text>
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $1.00
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Percent change
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <SvgMock
                color="#ca3542"
                fill="currentColor"
                height={16}
                name="Arrow2Down"
                style={
                  {
                    "height": 16,
                    "width": 16,
                  }
                }
                width={16}
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                -0.01%
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Volume
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $54.44M
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Market cap (FDV)
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $33.59B
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Contract address
              </Text>
            </View>
            <TouchableOpacity
              onPress={[Function]}
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={16}
                  name="Copy"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  width={16}
                />
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  EPjFWd...Dt1v
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TokenInsightsSheet renders correctly with token data 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "bottom": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#3f434a66",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      enabled={true}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#b7bbc866",
            "borderTopLeftRadius": 24,
            "borderTopRightRadius": 24,
            "borderWidth": 1,
            "maxHeight": 844,
            "overflow": "hidden",
            "paddingBottom": 0,
            "shadowColor": "#0000001a",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 40,
          },
          {
            "transform": [
              {
                "translateY": 844,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "padding": 4,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#b7bbc866",
              "borderRadius": 2,
              "height": 4,
              "width": 40,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#ffffff",
            "padding": 24,
            "width": "100%",
          }
        }
      >
        <View
          alignItems="center"
          flexDirection="column"
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "column",
              },
              {
                "gap": 2,
                "marginBottom": 16,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="token-insights-icon-USDC"
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "https://example.com/usdc.png",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            alignItems="center"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                {
                  "gap": 8,
                  "paddingTop": 16,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              USDC
               Insights
            </Text>
          </View>
        </View>
        <View
          flexDirection="column"
          style={
            [
              {
                "flexDirection": "column",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Price
              </Text>
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $1.00
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Percent change
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <SvgMock
                color="#ca3542"
                fill="currentColor"
                height={16}
                name="Arrow2Down"
                style={
                  {
                    "height": 16,
                    "width": 16,
                  }
                }
                width={16}
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                -0.01%
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Volume
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $54.44M
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Market cap (FDV)
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $33.59B
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Contract address
              </Text>
            </View>
            <TouchableOpacity
              onPress={[Function]}
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={16}
                  name="Copy"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  width={16}
                />
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  0x12345...67890
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
